--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -11,6 +11,6 @@ jobs:
           operation: 'update'
           classpath: 'example/changelogs'
           changeLogFile: 'samplechangelog.h2.sql'
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          url: ${{ secrets.URL }}
+          username: ${{ secrets.DEV_RELATIONAL_DB_USERNAME }}
+          password: ${{ secrets.DEV_RELATIONAL_DB_PASSWORD }}
+          url: ${{ secrets.DEV_RELATIONAL_DB_URL }}
